3605.	[port]		win32: Addressed several compatibility issues
			with newer versions of Visual Studio. [RT #33916]

3604.	[bug]		Fixed a compile-time error when building with
			JSON but not XML. [RT #33959]

3603.	[bug]		Install <isc/stat.h>. [RT #33956]

3602.	[contrib]	Added DLZ Perl module, allowing Perl scripts to
			integrate with named and serve DNS data.
			(Contributed by John Eaglesham of Yahoo.)

3601.	[bug]		Added to PKCS#11 openssl patches a value len
			attribute in DH derive key. [RT #33928]

3600.	[cleanup]	dig: Fixed a typo in the warning output when receiving
			an oversized response. [RT #33910]

3599.	[tuning]	Check for pointer equivalence in name comparisons.
			[RT #18125]

3598.	[cleanup]	Improved portability of map file code. [RT #33820]

3597.	[bug]		Ensure automatic-resigning heaps are reconstructed
			when loading zones in map format. [RT #33381]

3596.	[port]		Updated win32 build documentation, added
                        dnssec-verify. [RT #22067]

3595.	[port]		win32: Fix build problems introduced by change #3550.
			[RT #33807]

3594.	[maint]		Update config.guess and config.sub. [RT #33816]

3593.	[func]		Update EDNS processing to better track remote server
			capabilities. [RT #30655]

3592.	[doc]		Moved documentation of rndc command options to the
			rndc man page. [RT #33506]

3591.	[func]		Use CRC-64 to detect map file corruption at load
			time. [RT #33746]

3590.	[bug]		When using RRL on recursive servers, defer
			rate-limiting until after recursion is complete;
			also, use correct rcode for slipped NXDOMAIN
			responses.  [RT #33604]

3589.	[func]		Report serial numbers in when starting zone transfers.
			Report accepted NOTIFY requests including serial.
			[RT# 33037]

3588.	[bug]		dig: addressed a memory leak in the sigchase code
			that could cause a shutdown crash.  [RT #33733]

3587.	[func]		'named -g' now checks the logging configuration but
			does not use it. [RT #33473]
